force-app/main/default/objects/Marksheet__c/Marksheet__c.object-meta.xml
<CustomObject>
    <label>Marksheet</label>
    <nameField>
        <label>Marksheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marksheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>