force-app/main/default/objects/Marksheet__c/fields/Half_Yealry_80__c.field-meta.xml
<CustomField>
    <fullName>Half_Yealry_80__c</fullName>
    <label>Half Yealry (80)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>