force-app/main/default/objects/Marksheet__c/fields/Marks_Obt_100__c.field-meta.xml
<CustomField>
    <fullName>Marks_Obt_100__c</fullName>
    <label>Marks Obt. (100)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>