force-app/main/default/objects/Marksheet__c/fields/Notebook__c.field-meta.xml
<CustomField>
    <fullName>Notebook__c</fullName>
    <label>Notebook</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>