force-app/main/default/objects/Marksheet__c/fields/PT1__c.field-meta.xml
<CustomField>
    <fullName>PT1__c</fullName>
    <label>PT1</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>