force-app/main/default/objects/Marksheet__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <label>Students</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rajat Khajanchi</fullName>
            </value>
            <value>
                <fullName>Reeyansh Soni</fullName>
            </value>
            <value>
                <fullName>Rishabh Adhruj</fullName>
            </value>
            <value>
                <fullName>Roshan Nagwani</fullName>
            </value>
            <value>
                <fullName>Rudransh Rajput</fullName>
            </value>
            <value>
                <fullName>Sahil Gurjar</fullName>
            </value>
            <value>
                <fullName>Samriddhi Mittal</fullName>
            </value>
            <value>
                <fullName>Sanchita Dubey</fullName>
            </value>
            <value>
                <fullName>Sarthak Jaiswal</fullName>
            </value>
            <value>
                <fullName>Shaily Gurjar</fullName>
            </value>
            <value>
                <fullName>Shami Kourav</fullName>
            </value>
            <value>
                <fullName>Shivank Paliwal</fullName>
            </value>
            <value>
                <fullName>Shouryapratap Singh</fullName>
            </value>
            <value>
                <fullName>Shrejal Chourisya</fullName>
            </value>
            <value>
                <fullName>Shreya Jain</fullName>
            </value>
            <value>
                <fullName>Siddhi Kourav</fullName>
            </value>
            <value>
                <fullName>Siddhi Shukla</fullName>
            </value>
            <value>
                <fullName>Somesh Paliwal</fullName>
            </value>
            <value>
                <fullName>Srashti Agrawal</fullName>
            </value>
            <value>
                <fullName>Suyash Dixit</fullName>
            </value>
            <value>
                <fullName>Swarnima Patel</fullName>
            </value>
            <value>
                <fullName>Tanishqa Jethwani</fullName>
            </value>
            <value>
                <fullName>Tapasya Mishra</fullName>
            </value>
            <value>
                <fullName>Trapti Jagati</fullName>
            </value>
            <value>
                <fullName>Udayraj Thakur</fullName>
            </value>
            <value>
                <fullName>Ujjwal Pandey</fullName>
            </value>
            <value>
                <fullName>Ummehani Hussain</fullName>
            </value>
            <value>
                <fullName>Vaishnawi Kourav</fullName>
            </value>
            <value>
                <fullName>Vanishka Jethwani</fullName>
            </value>
            <value>
                <fullName>Vansh Vishwakarma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>