force-app/main/default/objects/Marksheet__c/fields/Sub_Enrichment_5__c.field-meta.xml
<CustomField>
    <fullName>Sub_Enrichment_5__c</fullName>
    <label>Sub. Enrichment (5)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>