force-app/main/default/objects/Marksheet__c/validationRules/PT1.validationRule-meta.xml
<ValidationRule>
    <fullName>PT1</fullName>
    <active>true</active>
    <errorConditionFormula>PT1__c &gt; 10</errorConditionFormula>
    <errorDisplayField>PT1__c</errorDisplayField>
    <errorMessage>Wrong Data</errorMessage>
</ValidationRule>