force-app/main/default/objects/Marksheet__c/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>Student__c</columns>
    <columns>Subjects__c</columns>
    <columns>PT1__c</columns>
    <columns>Notebook__c</columns>
    <columns>Sub_Enrichment_5__c</columns>
    <columns>Half_Yealry_80__c</columns>
    <columns>Marks_Obt_100__c</columns>
    <columns>Grade__c</columns>
    <filterScope>Mine</filterScope>
    <label>MyView</label>
</ListView>